# SIPE

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SIPE_Architecture.md  __init__.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt  test_config.py
.streamlit/: .env.example  config.toml
config/: __init__.py  logging.py  paths.py  settings.py  theme.py
core/: application.py  navigation.py  page.py  session_manager.py
docs/: CODING_GUIDELINES.md  CONTRIBUTING.md  DATA_MODEL.md  PRODUCT_BACKLOG.md  ROADMAP.md
domain/enums/: __init__.py  bsc_perspective.py  initiative_status.py  periodicity.py  priority.py  project_status.py  risk_level.py  risk_response.py  swot_strategy.py
domain/models/: action_plan.py  canvas.py  company.py  financial.py  identity.py  initiative.py  kpi.py  objective.py  objectives.py  pestel.py  porter.py  project.py  risk.py  swot.py
pages/: canvas.py  project.py
repositories/: json_repository.py  project_repository.py
services/: project_service.py
ui/forms/: canvas_form.py
ui/pages/: __init__.py  home.py
