[project]

name = "sipe"

version = "0.1.0"

description = "Sistema Integrado de Planejamento Estratégico"

requires-python = ">=3.12"

authors = [
    {name="Flávio Luiz de Moraes Barboza"}
]

[tool.black]

line-length = 88

target-version = ["py312"]

[tool.ruff]

line-length = 88

target-version = "py312"

[tool.pytest.ini_options]

pythonpath = ["."]

testpaths = [
    "tests"
]

[tool.isort]

profile = "black"

[tool.coverage.run]

source = [
    "."
]
